todo-app/taskset/helm/template.yaml
---
# Source: todo-app/template/todo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app-0-0-0
---
# Source: todo-app/template/todo-api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-api-gateway
  labels:
    todo-app-service: todo-api-gateway
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-api-gateway
  ports:
  - name: http
    port: 3000
    targetPort: 3000
---
# Source: todo-app/template/todo-cache-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-cache-service
  labels:
    todo-app-service: todo-cache-service
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-cache-service
  ports:
  - name: http
    port: 3000
    targetPort: 3000
---
# Source: todo-app/template/todo-elastic-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-elastic
  labels:
    todo-app-service: todo-elastic
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-elastic
  ports:
  - name: es-http
    port: 9200
    targetPort: 9200
  - name: es-transport
    port: 9300
    targetPort: 9300
---
# Source: todo-app/template/todo-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-postgres
  labels:
    todo-app-service: todo-postgres
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-postgres
  ports:
    - name: database-tcp-port
      port: 5432
      targetPort:  5432
---
# Source: todo-app/template/todo-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-proxy
  labels:
    todo-app-service: todo-proxy
spec:
  type: LoadBalancer
  selector:
    todo-app-pod: todo-proxy
  ports:
  - name: https
    port: 8080
    targetPort: 80
---
# Source: todo-app/template/todo-rabbitmq-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-rabbitmq-management
  labels:
    todo-app-service: todo-rabbitmq-management
spec:
  type: NodePort
  selector:
    todo-app-pod: todo-rabbitmq
  ports:
  - name: http
    port: 8081
    targetPort: 15672
---
# Source: todo-app/template/todo-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-rabbitmq
  labels:
    todo-app-service: todo-rabbitmq
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-rabbitmq
  ports:
  - name: amqp
    port:  5672
    targetPort: 5672
---
# Source: todo-app/template/todo-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-redis
  labels:
    todo-app-service: todo-redis
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-redis
  ports:
  - name: cache-port
    port: 6379
    targetPort: 6379
status:
  loadBalancer: { }
---
# Source: todo-app/template/todo-search-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-search-service
  labels:
    todo-app-service: todo-search-service
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-search-service
  ports:
  - name: "http"
    port: 3000
    targetPort: 3000
---
# Source: todo-app/template/todo-storage-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-storage-service
  labels:
    todo-app-service: todo-storage-service
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-storage-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
# Source: todo-app/template/todo-view-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-app-0-0-0
  name: todo-view
  labels:
    todo-app-service: todo-view
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-view
  ports:
    - name: http
      port:  8080
      targetPort: 8080
---
# Source: todo-app/template/todo-api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-api-gateway
  labels:
    todo-app-deployment: todo-api-gateway
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-api-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-api-gateway
    spec:
      restartPolicy: Always
      containers:
      - name: todo-api-gateway
        imagePullPolicy: Always
        image: onceawaken/todo-api-gateway:1.0
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-cache-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-cache-ingestion
  labels:
    todo-app-deployment: todo-cache-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-cache-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-cache-ingestion
    spec:
      restartPolicy: Always
      containers:
      - name: todo-cache-ingestion
        image: onceawaken/todo-cache-ingestion:1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-cache-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-cache-service
  labels:
    todo-app-deployment: todo-cache-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-cache-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-cache-service
    spec:
      restartPolicy: Always
      containers:
      - name: todo-cache-service
        image: onceawaken/todo-cache-service:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-elastic
  labels:
    todo-app-deployment: todo-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      todo-app-pod: todo-elastic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        todo-app-pod: todo-elastic
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: todo-elastic
          image: elasticsearch:6.6.1
          imagePullPolicy: Always
          ports:
            - name: es-http
              containerPort: 9200
            - name: es-transport
              containerPort: 9300
          resources:
            limits:
              memory: 2Gi
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elastic-data
          readinessProbe:
            httpGet:
              path: /
              port: 9200
              scheme: HTTP
            timeoutSeconds: 6
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
              scheme: HTTP
            initialDelaySeconds: 360
            timeoutSeconds: 6
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: elastic-data
          persistentVolumeClaim:
            claimName: elastic-data-pvc
---
# Source: todo-app/template/todo-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-postgres
  labels:
    todo-app-deployment: todo-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      todo-app-pod: todo-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        todo-app-pod: todo-postgres
    spec:
      restartPolicy: Always
      containers:
        - name: todo-postgres
          image: onceawaken/todo-postgres:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
          readinessProbe:
            exec:
              command: [ 'sh' , '-c', 'pg_isready -h localhost -U ${POSTGRES_USER}' ]
            initialDelaySeconds: 5
            timeoutSeconds: 1
            successThreshold: 3
          livenessProbe:
            exec:
              command: [ 'sh' , '-c', 'pg_isready -h localhost -U ${POSTGRES_USER}' ]
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
---
# Source: todo-app/template/todo-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-proxy
  labels:
    todo-app-deployment: todo-proxy
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-proxy
    spec:
      restartPolicy: Always
      containers:
      - name: todo-proxy
        image: onceawaken/todo-proxy:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-rabbitmq
  labels:
    todo-app-deployment: todo-rabbitmq
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-rabbitmq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        todo-app-pod: todo-rabbitmq
    spec:
      restartPolicy: Always
      containers:
        - name: todo-rabbitmq
          image: rabbitmq:3.7.13-management
          imagePullPolicy: Always
          ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
          resources:
            limits:
              memory: 500Mi
          livenessProbe:
            exec:
              command: ["rabbitmqctl", "status"]
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command: ["rabbitmqctl", "status"]
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 10
---
# Source: todo-app/template/todo-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-redis
  labels:
    todo-app-deployment: todo-redis
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-redis
    spec:
      restartPolicy: Always
      containers:
      - name: todo-redis
        image: redis:5.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: 256Mi
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 15
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 10
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 20
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 5
          timeoutSeconds: 1
---
# Source: todo-app/template/todo-search-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-search-ingestion
  labels:
    todo-app-deployment: todo-search-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-search-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-search-ingestion
    spec:
      restartPolicy: Always
      containers:
      - name: todo-search-ingestion
        image: onceawaken/todo-search-ingestion:1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-search-service
  labels:
    todo-app-deployment: todo-search-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-search-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-search-service
    spec:
      restartPolicy: Always
      containers:
      - name: todo-search-service
        image: onceawaken/todo-search-service:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128Mi
---
# Source: todo-app/template/todo-storage-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-storage-ingestion
  labels:
    todo-app-deployment: todo-storage-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-storage-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-storage-ingestion
    spec:
      restartPolicy: Always
      containers:
      - name: todo-storage-ingestion
        image: onceawaken/todo-storage-ingestion:1.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
---
# Source: todo-app/template/todo-storage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-storage-service
  labels:
    todo-app-deployment: todo-storage-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-storage-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-storage-service
    spec:
      restartPolicy: Always
      containers:
      - image: onceawaken/todo-storage-service:1.0
        imagePullPolicy: Always
        name: todo-storage-service
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
---
# Source: todo-app/template/todo-view-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app-0-0-0
  name: todo-view
  labels:
    todo-app-deployment: todo-view
spec:
  replicas: 1
  selector:
    matchLabels:
      todo-app-pod: todo-view
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-view
    spec:
      restartPolicy: Always
      containers:
        - name: todo-view
          image: onceawaken/todo-view:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
            - containerPort: 8080
          resources:
            limits:
              memory: 768Mi
---
# Source: todo-app/template/todo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: todo-app-0-0-0
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: todo-proxy
              servicePort: 80
